# vectrexy

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  COMPAT.md  README.md  appveyor.yml  vcpkg.json
.github/workflows/: ci.yml
cmake/: DepUtil.cmake  FindGLEW.cmake  FindGLM.cmake  FindImgui.cmake  FindSDL2.cmake  FindSTB.cmake  Util.cmake  dpiawarescaleing.manifest
docs/: vectrexy-compatilibity-list.md
include/core/: BitOps.h  CircularBuffer.h  ErrorHandler.h  Pimpl.h  Stream.h  Vector2.h
include/debugger/: Debugger.h
include/emulator/: EngineClient.h  EngineTypes.h  IllegalMemoryDevice.h  MemoryBus.h  Ram.h  Screen.h  Via.h
include/engine/: EngineClient.h  Overlays.h
libs/core/: CMakeLists.txt
libs/core/include/core/: Base.h  CircularBuffer.h  ConsoleOutput.h  Encode.h  ErrorHandler.h  FileSystemUtil.h  FrameTimer.h  Gui.h  Line.h  Platform.h  RegexUtil.h  StdUtil.h  Stream.h  StringUtil.h  StrongType.h  Tcp.h  TsEvent.h  TsQueue.h  Vector2.h
libs/core/src/: ErrorHandler.cpp  ImageUtil.cpp  Platform.cpp  Tcp.cpp
libs/debugger/: CMakeLists.txt
libs/debugger/include/debugger/: Breakpoints.h  CallStack.h  DapDebugger.h  DebugSymbols.h  Debugger.h  DebuggerUtil.h  GdbStub.h  RstFile.h  RstMatchers.h  RstParser.h  Trace.h
libs/debugger/src/: DapDebugger.cpp  DebugSymbols.cpp  Debugger.cpp  DebuggerUtil.cpp  GdbStub.cpp  GdbStubRef.cpp  RstFile.cpp  RstMatchers.cpp  RstParser.cpp  Trace.h
libs/emulator/: CMakeLists.txt
libs/emulator/include/emulator/: BiosRom.h  Cpu.h  CpuHelpers.h  DelayedValueStore.h  DevMemoryDevice.h  Emulator.h  EngineTypes.h  MemoryBus.h  MemoryMap.h  Psg.h  Ram.h  Screen.h  ShiftRegister.h  Timers.h  UnmappedMemoryDevice.h  Via.h
libs/emulator/src/: BiosRom.cpp  Cartridge.cpp  Cpu.cpp  DevMemoryDevice.cpp  Emulator.cpp  Psg.cpp  Screen.cpp  UnmappedMemoryDevice.cpp  Via.cpp
libs/engine/: CMakeLists.txt
libs/engine/include/engine/: EngineClient.h  EngineUtil.h  Options.h  Overlays.h  Paths.h
libs/engine/src/: EngineUtil.cpp  Options.cpp  Overlays.cpp
libs/engine/src/sdl_gl/: SDLAudioDriver.cpp  SDLEngine.cpp
libs/engine/src/sdl_gl/shaders/: DrawVectors.vert
libs/null_engine/: CMakeLists.txt
libs/null_engine/include/null_engine/: NullEngine.h
libs/null_engine/src/: NullEngine.cpp
libs/sdl_engine/: CMakeLists.txt
libs/sdl_engine/include/sdl_engine/: SDLEngine.h
libs/sdl_engine/src/: GLRender.cpp  GLUtil.cpp  GLUtil.h  InputDevice.cpp  InputDevice.h  InputManager.cpp  InputManager.h  InputMapping.h  SDLAudioDriver.cpp  SDLAudioDriver.h  SDLEngine.cpp  SDLGameController.cpp  SDLGameController.h  SDLKeyboard.h  VulkanRender.cpp  VulkanRender.h
libs/sdl_engine/src/imgui_impl/: imgui_impl_sdl_gl3.cpp
libs/sdl_engine/src/shaders/: Glow.frag
libs/sdl_engine/src/vk_shaders/: compile.bat
libs/sdl_gl_engine/: CMakeLists.txt
libs/sdl_gl_engine/include/sdl_gl/: SDLEngine.h
libs/sdl_gl_engine/src/: GLRender.h  SDLAudioDriver.cpp  SDLEngine.cpp
libs/sdl_gl_engine/src/imgui_impl/: imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h
libs/sdl_gl_engine/src/shaders/: CombineVectorsAndGlow.frag  DarkenTexture.frag  DrawTexture.frag
libs/stabs_parser/: CMakeLists.txt
libs/stabs_parser/include/stabs_parser/: StabsFile.h  StabsParser.h
libs/stabs_parser/src/: ScopedOstreamCapture.cpp  ScopedOstreamCapture.h  StabsFile.cpp  StabsParser.cpp
libs/stabs_parser/tests/: CMakeLists.txt  StabsParserTest.cpp
libs/vectrexy/: CMakeLists.txt
libs/vectrexy/src/: main.cpp
package/: package_linux.sh
shaders/: CombineVectorsAndGlow.frag  CopyTexture.frag  DarkenTexture.frag  DrawScreen.frag  DrawTexture.frag  DrawVectors.frag  DrawVectors.vert  Glow.frag  Passthrough.vert
src/: Base.h  BiosRom.cpp  BiosRom.h  BitOps.h  Breakpoints.h  Cartridge.cpp  Cartridge.h  CircularBuffer.h  ConsoleOutput.h  Cpu.cpp  Cpu.h  CpuHelpers.h  CpuOpCodes.h  Debugger.cpp  Debugger.h  DelayedValueStore.h  Emulator.cpp  Emulator.h  EngineClient.h  EngineTypes.h  ErrorHandler.h  FileSystem.h  FileSystemUtil.h  GLRender.cpp  GLRender.h  GLUtil.cpp  GLUtil.h  GLUtils.cpp  GLUtils.h  Gui.h  IllegalMemoryDevice.h  ImageFileUtils.cpp  ImageFileUtils.h  ImageUtil.cpp  ImageUtil.h  Line.h  MathUtil.h  MemoryBus.h  MemoryMap.h  Options.cpp  (+32 more)
src/core/: ImageUtil.cpp  Platform.cpp  Stream.cpp
src/debugger/: Debugger.cpp
src/emulator/: BiosRom.cpp  Cartridge.cpp  Cpu.cpp  Emulator.cpp  ShiftRegister.cpp
src/engine/: Options.cpp  Overlays.cpp
src/engine/sdl_gl/: GLUtil.h  Paths.h  SDLAudioDriver.cpp  SDLAudioDriver.h  SDLEngine.cpp  main.cpp
src/imgui_impl/: imgui_impl_sdl_gl3.cpp
src/shaders/: CopyTexture.frag  DarkenTexture.frag  DrawTexture.frag  DrawVectors.frag  Glow.frag  Passthrough.vert
tests/debugger_tests/: CMakeLists.txt
tests/debugger_tests/build-template/: Makefile
tests/debugger_tests/build-template/make/: crt0.tpl
tests/debugger_tests/src/: main.cpp
tools/cmake/: CMakeGraphVizOptions.cmake  plot_deps.bat
tools/package/: package_linux.sh  package_windows.bat  travis_bintray_descriptor.json
